# Local-Ai-App

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CHECKPOINT_14_REPORT.md  CMakeLists.txt  CONTEXT_MANAGEMENT_IMPLEMENTATION.md  CONTRIBUTING.md  FINAL_QA_AND_RELEASE_ROADMAP.md  FINAL_STATUS_REPORT.md  HARDWARE_ACCELERATION_TEST_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  LICENSE  PROJECT_ROADMAP.md  README.md  SETUP_COMPLETE.md  TASK_10.3_CALLBACK_THREADING_SUMMARY.md  TASK_11.1_RESOURCE_CLEANUP_SUMMARY.md  TASK_12.1_HARDWARE_ACCELERATION_SUMMARY.md  TASK_13.1_OFFLINE_INFERENCE_SUMMARY.md  TASK_13.2_SECURE_DOWNLOADS_SUMMARY.md  TASK_15.1_OBJCPP_BRIDGE_SUMMARY.md  TASK_15.2_SWIFT_API_SUMMARY.md  TASK_15.3_COREML_INTEGRATION_SUMMARY.md  TASK_15.4_COMPLETION_SUMMARY.md  TASK_15.4_LIFECYCLE_MANAGEMENT_SUMMARY.md  TASK_3.11_SUMMARY.md  TASK_3.2_SUMMARY.md  TASK_3.3_SUMMARY.md  TASK_3.4_SUMMARY.md  TASK_3.5_SUMMARY.md  TASK_4.1_SUMMARY.md  TASK_4.2_SUMMARY.md  TASK_5.1_SUMMARY.md  TASK_5.2_SUMMARY.md  TASK_5.4_SUMMARY.md  TASK_5.6_SUMMARY.md  TASK_5.7_SUMMARY.md  TASK_5.9_SUMMARY.md  TASK_6.1_SUMMARY.md  (+31 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_issue.md
.github/workflows/: ci.yml  release.yml
.kiro/specs/on-device-ai-sdk/: design.md  requirements.md  tasks.md
android/app/: build.gradle.kts
android/app/src/main/kotlin/com/threesixty/localai/local_ai_chat/: MainActivity.kt
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  BUILD_AND_DISTRIBUTION.md  POST_RELEASE_SUPPORT.md  PRE_RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY_AUDIT_REPORT.md
examples/: CMakeLists.txt
ios/: Podfile
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/llm/: chat_template.dart  llm_service.dart  model_manager.dart
lib/core/storage/: chat_repository.dart
lib/features/chat/: chat_screen.dart
lib/features/chat/widgets/: chat_input.dart  message_bubble.dart
lib/features/onboarding/: model_download_screen.dart
lib/features/settings/: settings_screen.dart
lib/models/: conversation.dart  conversation.g.dart  message.dart  message.g.dart  model_info.dart  models.dart
lib/theme/: app_theme.dart
models/: registry.json
scripts/: build_release.sh  publish_release.sh  run_all_tests.sh
tests/: CMakeLists.txt  CrossPlatformTests.ts  standalone_validation_test.cpp
tests/benchmark/: CMakeLists.txt  memory_resource_test.cpp  performance_benchmark_test.cpp
tests/property/: CMakeLists.txt  concurrency_properties_test.cpp  error_properties_test.cpp  input_validation_properties_test.cpp  llm_properties_test.cpp  memory_manager_properties_test.cpp  model_manager_properties_test.cpp  sdk_recovery_properties_test.cpp  stt_properties_test.cpp  tts_properties_test.cpp  voice_pipeline_properties_test.cpp
tests/security/: CMakeLists.txt  security_privacy_test.cpp
tests/unit/: audio_preprocessing_test.cpp  callback_threading_test.cpp  concurrency_test.cpp  download_test.cpp  error_handling_test.cpp  error_recovery_test.cpp  hardware_acceleration_test.cpp  input_validation_test.cpp  ios_acceleration_test.cpp  llm_engine_integration_test.cpp  llm_engine_test.cpp  llm_engine_unit_test.cpp  logger_test.cpp  lru_cache_integration_test.cpp  memory_manager_test.cpp  model_discovery_integration_test.cpp  model_download_integration_test.cpp  model_download_verification_test.cpp  model_manager_test.cpp  model_storage_management_test.cpp  model_versioning_test.cpp  offline_operation_test.cpp  resource_cleanup_test.cpp  sdk_manager_test.cpp  secure_downloads_test.cpp  sha256_test.cpp  stt_engine_test.cpp  tts_comprehensive_test.cpp  tts_engine_test.cpp  tts_multi_voice_test.cpp  version_utils_test.cpp  voice_pipeline_comprehensive_test.cpp  voice_pipeline_test.cpp
